feat: standardize Java production incidents and add depth to content
Java Course:
- Add 2 production incidents to modules 09-16 (16 total) to reach 5 per module
- All 18 modules now have 5 production incidents each
- Add more examples to modules 00, 01, 03, 04, 05, 06, 07, 08, 09, 10, 12, 13, 14, 15, 16
- Java content depth increased from 561 to 599 lines per module average

Both courses now have:
- Consistent 23/23 sections per module
- 15 interview questions per module
- 5 production incidents per module
- Same structure and quality standard